fix home banner alignment
Former-commit-id: 59c3ec99a81b603a0d3e69372d5164956c86f7bf
Former-commit-id: 73f4338887047e78833e260e2d5d933b680597a0
Former-commit-id: 94b5ddf0560f981de06da6d95f453cd303db3be5
Former-commit-id: 7ac8ade7761826f6fb964ff38534fa249e6c4058

--- a/public/stylesheets/dev.css
+++ b/public/stylesheets/dev.css
@@ -110,6 +110,7 @@ h1{margin-top:40px}
 /* home */
 
 #home-main{padding:0;margin:0 auto}
+#home-banner{text-align:center}
 #home-banner h4{margin-left:25px}
 #home-banner img{margin-top:10px}
 .home-custom-list{list-style-image:url('../images/home/bullet.png')}
